added volley project

--- a/VolleyExample/app/src/main/AndroidManifest.xml
+++ b/VolleyExample/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ademsalih.implicitintentsreceiver">
+    package="com.ademsalih.volleyexample">
 
     <application
         android:allowBackup="true"
@@ -14,12 +14,6 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="http" android:host="developer.android.com" />
             </intent-filter>
         </activity>
     </application>
